--- a/setup.cfg
+++ b/setup.cfg
@@ -15,19 +15,26 @@ warn_return_any = True
 warn_unused_configs = True
 namespace_packages = True
 
+[isort]
+profile = black
+multi_line_output = 3
+
 [tox:tox]
 skipsdist = true
-envlist = py38-lint
+envlist = py310-lint
 
-[testenv:py38-lint]
+[testenv:py310-lint]
 skip_install = true
 deps =
     black
     mypy
     flake8
     flake8-black
-    PyQt5-stubs
+    git+https://github.com/TilmanK/PyQt6-stubs.git
+    types-PyYAML
+    isort
 commands =
     black generator main.py --check --diff
     flake8 generator main.py
     mypy generator main.py
+    isort -c generator main.py
