Re-organizer code into a proper package.

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ deps =
     types-PyYAML
     isort
 commands =
-    black generator main.py --check --diff
-    flake8 generator main.py
-    mypy generator main.py
-    isort -c generator main.py
+    black src --check --diff
+    flake8 src
+    mypy src
+    isort -c src
