--- a/configs/config-2.5.yml
+++ b/configs/config-2.5.yml
@@ -3140,6 +3140,120 @@ mobase:
 
 mobase.widgets:
 
-  TaskDialog: {}
+  TaskDialog:
+    __doc__: Customizable choice dialog.
 
-  TaskDialogButton: {}
+    __init__:
+      __doc__: Construct a new TaskDialog.
+
+      args:
+        parent: Parent widget of the dialog.
+        title: Title of the dialog.
+        main: Header of the dialog (big text at the top).
+        content: Main message of the dialog (text below main).
+        details: Details for the dialog, initially collapsed (bottom of the dialog).
+        icon: Icon for the dialog.
+        buttons: List of buttons for the dialog.
+        remember: Remember the choice for this dialog.
+
+    addButton:
+      __doc__: Add a custom button to this TaskDialog.
+
+      args:
+        button: Button to add to the dialog.
+
+    addContent:
+      __doc__: |
+        Add a custom widget content to this TaskDialog. Widget content are put between
+        content and buttons (above buttons).
+
+      args:
+        widget: Widget to add.
+
+    exec:
+      __doc__: |
+        Display this dialog and wait for user-interaction to return. This is a blocking
+        function.
+
+      returns:
+        The button clicked by the user. Without custom buttons, this return Ok,
+        otherwise it returns the button set in the TaskDialogButton.
+
+    setContent:
+      __doc__: Set the top-level message of this dialog.
+
+      args:
+        content: Top-level message to set.
+
+    setDetails:
+      __doc__: |
+        Set the details for this TaskDialog.
+
+        The details are hidden by default and the user can display them by clicking
+        the "Details" button at the bottom of the TaskDialog.
+
+      args:
+        details: Details content to display. Can be a multi-line string.
+
+    setIcon:
+      __doc__: Set the icon of the dialog.
+
+      args:
+        icon: Icon of the dialog.
+
+    setMain:
+      __doc__: |
+        Set the main message of the dialog. The main message is displayed at the top of
+        the dialog in large font.
+
+      args:
+        main: Main message of the dialog.
+
+    setRemember:
+      __doc__: Configure the dialog to remember user-choice.
+
+      args:
+        action:
+        file:
+
+    setTitle:
+      __doc__: Set the title of the dialog.
+
+      args:
+        title: Title of the dialog.
+
+    setWidth:
+      __doc__: Set the width of the dialog.
+
+      args:
+        width: Width of the dialog.
+
+
+  TaskDialogButton:
+    __doc__: Special button to be used inside TaskDialog widgets.
+
+    __init__.1:
+      __doc__: Create a TaskDialogButton.
+
+      args:
+        text: Label of the button.
+        description: Description of the button.
+        button: Value returned by TaskDialog.exec() if this button is clicked.
+
+    __init__.2:
+      __doc__: Create a TaskDialogButton without description.
+
+      args:
+        text: Label of the button.
+        button: Value returned by TaskDialog.exec() if this button is clicked.
+
+    properties[]:
+      text:
+        type: str
+        desc: Label of the button.
+      description:
+        type: str
+        desc: Description of the button.
+      button:
+        type: PyQt6.QtWidgets.QMessageBox.StandardButton
+        desc: Value returned by TaskDialog.exec() if this button is clicked.
