--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -1,6 +1,7 @@
 name: Build Documentation
 
 on:
+  pull_request:
   push:
     branches:
       - master
@@ -10,26 +11,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          persist-credentials: false
-      # Standard drop-in approach that should work for most people.
-      - uses: ammaraskar/sphinx-action@master
+          python-version: 3.11
+      - uses: abatilo/actions-poetry@v2
+      - name: Install
+        run: |
+          poetry install
+      - name: Install libgl1
+        run: sudo apt install -y libgl1 libegl1 libglib2.0-0 libxkbcommon0 libdbus-1-3
+      - name: Copy stubs
+        run: cp stubs/2.5.0/mobase-stubs/__init__.pyi docs/mobase.py
+      - name: Build
+        run: poetry run sphinx-build -b html docs/source docs/build
         env:
-          PYTHONPATH: .
-        with:
-          pre-build-command: "apt-get update -y && apt-get install -y libgl1-mesa-glx && cp stubs/2.4.0/mobase.pyi docs/mobase.py"
-          docs-folder: "docs/"
+          PYTHONPATH: docs
 
-      - name: Install SSH Client 🔑
+      - if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+        name: Install SSH Client 🔑
         uses: webfactory/ssh-agent@v0.4.1
         with:
           ssh-private-key: ${{ secrets.DEPLOY_KEY }}
 
-      - name: Deploy 🚀
+      - if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+        name: Deploy Documentation
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           SSH: true
           REPOSITORY_NAME: ModOrganizer2/python-plugins-doc
           BRANCH: master
-          FOLDER: docs/build/html
+          FOLDER: docs/build
