--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,13 @@ flake8-black = "^0.3.6"
 flake8-pyproject = "^1.2.3"
 types-pyyaml = "^6.0.12.11"
 
+
+[tool.poetry.group.doc.dependencies]
+sphinx-rtd-theme = "^1.3.0"
+sphinx-autodoc-typehints = "^1.24.0"
+sphinx-automodapi = "^0.16.0"
+sphinx = "^7.2.6"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
