--- a/configs/config-2.5.yml
+++ b/configs/config-2.5.yml
@@ -2400,6 +2400,18 @@ mobase:
         True if the given plugin is a light plugin, False otherwise or if the
         file does not exist.
 
+    isOverlayFlagged:
+      __doc__: |
+        Determine if a plugin is flagged as overlay
+
+        This plugin flag was added in Starfield and signifies plugin records that
+        update existing records
+      args:
+        name: Filename of the plugin (without path but with file extension).
+      returns: |
+        True if the given plugin is an overlay plugin, False otherwise or if the
+        file does not exist.
+
     hasLightExtension:
       __doc__: |
         Determine if a plugin has a .esl extension.
