--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,51 +11,54 @@ packages = [{ include = "mo2", from = "src" }]
 mo2-stubs-generator = "mo2.stubs.generator.__main__:main"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-pyqt6 = "^6.5.2"
+python = "^3.12"
+pyqt6 = "^6.7.0"
 pyyaml = "^6.0.1"
 
-
 [tool.poetry.group.dev.dependencies]
-black = "^23.9.1"
-mypy = "^1.5.1"
-pyright = "^1.1.327"
-isort = "^5.12.0"
-ruff = "^0.0.290"
-flake8 = "^6.1.0"
-flake8-black = "^0.3.6"
-flake8-pyproject = "^1.2.3"
-types-pyyaml = "^6.0.12.11"
-
+pyright = "^1.1.365"
+ruff = "^0.4.7"
+types-pyyaml = "^6.0.12.20240311"
+poethepoet = "^0.26.1"
 
 [tool.poetry.group.doc.dependencies]
-sphinx-rtd-theme = "^1.3.0"
-sphinx-autodoc-typehints = "^1.24.0"
+sphinx-rtd-theme = "^2.0.0"
+sphinx-autodoc-typehints = "^2.1.0"
 sphinx-automodapi = "^0.16.0"
-sphinx = "^7.2.6"
+sphinx = "^7.3.7"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.poe.tasks]
+format-imports = "ruff check --select I src --fix"
+format-ruff = "ruff format src"
+format.sequence = ["format-imports", "format-ruff"]
+lint-ruff = "ruff check src"
+lint-ruff-format = "ruff format --check src"
+lint-pyright = "pyright src"
+lint.sequence = ["lint-ruff", "lint-ruff-format", "lint-pyright"]
+lint.ignore_fail = "return_non_zero"
+
 [tool.flake8]
 max-line-length = 88
-extend-ignore = ["E203"]
-
-[tool.isort]
-profile = "black"
-multi_line_output = 3
+# See https://github.com/PyCQA/pycodestyle/issues/373
+extend-ignore = ['E203', 'E231']
+per-file-ignores = ['*.pyi:E301,E302,E305,E501,E701']
 
 [tool.ruff]
-line-length = 88
-target-version = "py311"
+target-version = "py310"
 
-[tool.mypy]
-warn_return_any = true
-warn_unused_configs = true
-namespace_packages = true
+[tool.ruff.lint]
+extend-select = ["B", "Q", "I"]
+
+[tool.ruff.lint.isort]
+known-first-party = ['tas']
+
+[tool.ruff.lint.flake8-bugbear]
+extend-immutable-calls = ["astropy.units.Quantity"]
 
 [tool.pyright]
-# reportMissingTypeStubs = true
-# reportUntypedBaseClass = false
 typeCheckingMode = "strict"
+reportMissingTypeStubs = true
