Prepare stubs for 2.5.2.

--- a/configs/config-2.5.yml
+++ b/configs/config-2.5.yml
@@ -3,12 +3,11 @@
 version: 2
 
 # version of the stubs - this is overridden when publishing
-__version__: "2.5.1"
+__version__: "2.5.2"
 
 # This is the root of the mobase module and will contain everything
 # related to functions / classes, including their documentation.
 mobase:
-
   getFileVersion:
     __doc__: Retrieve the file version of the given executable.
     args:
@@ -302,7 +301,7 @@ mobase:
     hasSuffix.2:
       __doc__: Check if this entry has the given suffix.
       args:
-        suffix:  Suffix to check.
+        suffix: Suffix to check.
       returns: True if this entry is a file and has the given suffix.
 
     isDir:
@@ -487,9 +486,6 @@ mobase:
 
       returns: The number of unregistered features.
 
-
-
-
   GamePlugins:
     __abstract__: true
     getLoadOrder:
@@ -497,8 +493,8 @@ mobase:
       returns:
     lightPluginsAreSupported:
       returns: True if light plugins are supported, False otherwise.
-    overridePluginsAreSupported:
-      returns: True if override plugins are supported, False otherwise.
+    mediumPluginsAreSupported:
+      returns: True if medium plugins are supported, False otherwise.
     readPluginLists:
       __doc__:
       args:
@@ -582,7 +578,6 @@ mobase:
       returns: The list of variants for this GuessedString.
 
   IDownloadManager:
-
     downloadPath:
       __doc__: Retrieve the (absolute) path of the specified download.
       args:
@@ -740,7 +735,7 @@ mobase:
         given path.
       args:
         path: Path to the file to create.
-        replace_if_exists:  |
+        replace_if_exists: |
           If True and an entry already exists at the given location, it will be replaced by
           a new entry. This will replace both files and directories.
       returns: A FileTreeEntry corresponding to the created file.
@@ -1003,7 +998,6 @@ mobase:
       returns: The result of the installation.
 
   IModInterface:
-
     absolutePath:
       returns: Absolute path to the mod to be used in file system operations.
 
@@ -1339,7 +1333,6 @@ mobase:
       returns: The state of the given mod.
 
   IModRepositoryBridge:
-
     __bases__:
       - PyQt6.QtCore.QObject
 
@@ -2482,7 +2475,6 @@ mobase:
         installation did not succeed.
 
   IPluginList:
-
     __doc__: Primary interface to the list of plugins.
 
     isMaster:
@@ -2527,10 +2519,9 @@ mobase:
         True if the given file plugin contains no records, False if it does OR if the
         file does not exist.
 
-
     isLightFlagged:
       __doc__: |
-        Determine if a plugin is flagged as light
+        Determine if a plugin is flagged as light.
 
         In gamebryo games, a master file will usually have a .esl file extension but
         technically an esp can be flagged as light.
@@ -2540,16 +2531,16 @@ mobase:
         True if the given plugin is a light plugin, False otherwise or if the
         file does not exist.
 
-    isOverlayFlagged:
+    isMediumFlagged:
       __doc__: |
-        Determine if a plugin is flagged as overlay
+        Determine if a plugin is flagged as medium.
 
         This plugin flag was added in Starfield and signifies plugin records that
         update existing records
       args:
         name: Filename of the plugin (without path but with file extension).
       returns: |
-        True if the given plugin is an overlay plugin, False otherwise or if the
+        True if the given plugin is a medium plugin, False otherwise or if the
         file does not exist.
 
     hasLightExtension:
@@ -2662,7 +2653,6 @@ mobase:
       returns: The state of the plugin.
 
   IPluginModPage:
-
     _parentWidget:
       abstract: false
       returns: The parent widget.
@@ -2708,14 +2698,26 @@ mobase:
       by qt are implemented (including dds) but no audio files and no 3d mesh formats.
 
     genFilePreview:
-      __doc__: Generate a preview for the specified file.
+      __doc__: Generate a preview widget for the specified file.
       args:
         filename: Path to the file to preview.
         max_size: Maximum size of the generated widget.
       returns: The widget showing a preview of the file.
 
+    genDataPreview:
+      __doc__: Generate a preview widget from in-memory data.
+      args:
+        file_data: In-memory data to preview.
+        filename: Name of the file the data comes from.
+        max_size: Maximum size of the generated widget.
+      returns: The widget showing a preview of the in-memory data.
+
     supportedExtensions:
       returns: The list of file extensions that are supported by this preview plugin.
+
+    supportsArchives:
+      __doc__: Check if this preview plugin supports preview from in-memory data.
+      returns: True if the plugin supports preview from raw data, False otherwise.
 
   IPluginRequirement:
     __doc__: Class representing requirements for plugins.
@@ -2798,7 +2800,6 @@ mobase:
       args:
         plugin: The name of the plugin that must be enabled.
       returns: The constructed requirement.
-
 
   IPluginTool:
     __doc__: |
@@ -2927,7 +2928,6 @@ mobase:
       returns:
 
   Mapping:
-
     __init__.1:
       __doc__: Creates an empty Mapping.
 
@@ -3348,7 +3348,6 @@ mobase:
       returns: The version scheme in effect for this VersionInfo.
 
 mobase.widgets:
-
   TaskDialog:
     __doc__: Customizable choice dialog.
 
@@ -3436,7 +3435,6 @@ mobase.widgets:
 
       args:
         width: Width of the dialog.
-
 
   TaskDialogButton:
     __doc__: Special button to be used inside TaskDialog widgets.
